@@ -1,5 +1,5 @@
 <?php
-// $Id: text.test,v 1.8 2009-07-13 21:51:09 webchick Exp $
+// $Id: text.test,v 1.9 2009-07-27 20:15:35 dries Exp $
 
 class TextFieldTestCase extends DrupalWebTestCase {
   protected $instance;
@@ -286,12 +286,12 @@ class TextSummaryTestCase extends DrupalWebTestCase {
     // And using a text format WITH the line-break and htmlcorrector filters.
     $expected_lb = array(
       "<p>\nHi\n</p>\n<p>\nfolks\n<br />\n!\n</p>",
-      "<",
-      "<p",
-      "<p></p>",
-      "<p></p>",
-      "<p></p>",
-      "<p></p>",
+      "",
+      "<p />",
+      "<p />",
+      "<p />",
+      "<p />",
+      "<p />",
       "<p>\nHi</p>",
       "<p>\nHi</p>",
       "<p>\nHi</p>",
