@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.318 2009-07-27 19:53:17 dries Exp $
+// $Id: CHANGELOG.txt,v 1.319 2009-07-27 20:15:35 dries Exp $
 
 Drupal 7.0, xxxx-xx-xx (development version)
 ----------------------
@@ -73,6 +73,8 @@ Drupal 7.0, xxxx-xx-xx (development version)
     * If your site is being upgraded from Drupal 6 and you do not have the
       contributed date or event modules installed, user time zone settings will
       fallback to the system time zone and will have to be reconfigured by each user.
+- Filter system:
+    * Refactored the HTML corrector to take advantage of PHP 5 features.
 - Removed ping module:
     * Contributed modules with similar functionality are available.
 - Refactored the "access rules" component of user module:
